Prep for 1.3 debugging

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -120,6 +120,13 @@ v0.31:
 		/tw set usingtowny [on/off]
 v0.32:
 	Added new permission Item Use. Used to prevent using items (like buckets and lighters).
+v0.33:
+	Added points per kill during war.
+	Introducing . . . Pet Zombie mode. An amusing bug from the last release, hoping to prevent damage within towns from other players (PvP) has also prevented PvE. So in the config, there is now an option for your very own pet zombie mode (no_pve_within_non_pvp_towns)
+v0.34 (Craftbukkit 424+ & Minecraft 1.3):
+	Removed the effects of Item Use, as it's buggy and removes items. The code to set the permissions remains to no effect.
 	
+	
+
 TODO:	
 	Ability to make NPC Residents profiles (not actual human entities). /townyadmin set mayor [town] npc
