--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -126,7 +126,8 @@ v0.33:
 v0.34 (Craftbukkit 424+ & Minecraft 1.3):
 	Added support for GroupManager directly.
 v0.35:
-	
+	Fixed entity damage mess caused by the PvE option.
+	Updated for iConomy 3.0
 	
 
 TODO:	
