--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -128,7 +128,10 @@ v0.34 (Craftbukkit 424+ & Minecraft 1.3):
 v0.35:
 	Fixed entity damage mess caused by the PvE option.
 	Updated for iConomy 3.0
-	
+v0.36:
+	Added new town/nation permissions along with config msgs for those without them.	
+	Town set public was actually editing the pvp setting.
+	Changed towny version command to /towny v, as bukkit highjacks the "version" token.
 
 TODO:	
 	Ability to make NPC Residents profiles (not actual human entities). /townyadmin set mayor [town] npc
