--- a/src/ChangeLog.txt
+++ b/src/ChangeLog.txt
@@ -242,3 +242,13 @@ v0.69:
 	Fixed iChat
 v0.70:
 	Added permissions 3 support
+v0.71:
+    The following configs are depreciated and now in Permissions
+    NATION_CREATION_ADMIN_ONLY is now set by: towny.nation.new
+    town_creation_admin_only is now set by: towny.town.new
+    unclaimed_zone_build is now set by: towny.wild.build
+    unclaimed_zone_destroy is now set by: towny.wild.destroy
+    unclaimed_zone_switch is now set by: towny.wild.switch
+    unclaimed_zone_itemuse is now set by: towny.wild.item_use
+    unclaimed_zone_ignore is now set by: towny.wild.block.[block id]
+    /townyworld set wild* commands are no longer availiable
