Fixed chat bug, I think. Added my sql files which still need more work

--- a/src/ChangeLog.txt
+++ b/src/ChangeLog.txt
@@ -252,3 +252,4 @@ v0.71:
     unclaimed_zone_itemuse is now set by: towny.wild.item_use
     unclaimed_zone_ignore is now set by: towny.wild.block.[block id]
     /townyworld set wild* commands are no longer availiable
+    Fixed town and nation renaming
